# Monefy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake
backend/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
backend/models/: Account.h  Category.h  Transaction.h  User.h
backend/models/storage/: AccountStorage.cpp  AccountStorage.h  UserStorage.cpp
backend/services/: AuthService.cpp  AuthService.h  TransactionService.cpp  TransactionService.h
backend/storage/: AccountStorage.h  CategoryStorage.cpp  CategoryStorage.h  TransactionStorage.cpp  TransactionStorage.h  UserStorage.cpp  UserStorage.h
frontend/: accounts.html  auth-api.js  auth.html  categories.html  history.html  index.html  style.css
